--- a/gp_calibration_questions.tex
+++ b/gp_calibration_questions.tex
@@ -117,6 +117,31 @@ involves running the entire simulation with the current calibration $u$. Therefo
 which is infeasible for computationally expensive simulations. 
 
 \subsection{Emulator Methodology: ``Modular Approach''}
+To deal with the computational issue in the brute force approach, we replace the computer model with a GP emulator/surrogate $\eta(\cdot) \sim \mathcal{GP}(\mu(\cdot), k(\cdot, \cdot))$. 
+Among the various emulator calibration approaches, I believe you are using the ``modular'' approach described in Gramacy 8.1.2 and originally in 
+\href{https://projecteuclid.org/journals/bayesian-analysis/volume-4/issue-1/Modularization-in-Bayesian-analysis-with-emphasis-on-analysis-of-computer/10.1214/09-BA404.full}{Bayarri et al (2009)}. 
+For now I am considering emulating the model outputs directly; I know that you emulate the sufficient statistics - I'll add this in once i have the basics down. The calibration approach is as follows. 
+\begin{enumerate}
+\item Run the full model on $N$ design points (i.e. knots): $\{(x_1^m, u_1), \dots, (x_N^m, u_N)\}$, where the ``m'' superscript differentiates from the vector of observation parameters $x$
+sampled in the field data. Presumably, the design points are chosen such that $\{x_1^m, \dots, x_N^m\} \subset \{x_1, \dots, x_n\}$; that is, the model is run at the observation parameter
+values observed in the real-world, with the possibility of replicates. Continuing with the same notation as before, let $x^m$ and $u^m$ be N-dimensional vectors containing the 
+$x_i^m$ and $u_i^m$, respectively. Also let $y^m = (y_1^{u_1}, \dots, y_N^{u_N})$ be the vector of simulator outputs evaluated at the $N$ design points. 
+\item Fit the GP emulator \textit{only using the computer model data} $y^m$. Denote the fit emulator by $\eta$. 
+\item Now essentially conduct the brute force approach described above, but with $\eta$ replacing $f$. That is, we sample from posterior
+\[p(u, \tau|z, \eta) \propto p(z|u, \tau, \eta)p(u, \tau) = N_n(z|\eta(x, u), \tau^2 I_n)p(u, \tau)\]
+Now in each step of MCMC we need only evaluate the mean of the GP $\eta(x, u)$ at the current proposed $u$, rather than the whole computer model $f$. 
+\end{enumerate}
+This approach is not the one proposed by Kennedy and O'Hagan, which is the ``fully Bayesian'' approach: they assume a GP prior for $f$, then consider the posterior over the GP parameters
+in addition to the other parameters. Gramacy notes that the modular approach can help to avoid some of the pathologies sometimes present in the fully Bayesian approach. 
+
+\textbf{TODO:} I don't think they're using this approach since they are emulating the discrepancy with field data and thus using the field data to fit the GP. 
+
+
+\subsubsection{Questions}
+\begin{itemize}
+\item Am I correct in describing the calibration methodology used in PEcAn? 
+\item What choices are you making for the GP parameters (mean function $\mu$ and kernel/covariance function $k$)?
+\end{itemize}
 
 
 \section{PEcAn Code}
