--- a/gp_calibration_questions.tex
+++ b/gp_calibration_questions.tex
@@ -9,6 +9,8 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{epstopdf,enumitem,microtype,dcolumn,booktabs,hyperref,url,fancyhdr}
+\usepackage{algorithmic}
+\usepackage[ruled,commentsnumbered,titlenotnumbered]{algorithm2e}
 
 % Plotting
 \usepackage{pgfplots}
@@ -176,8 +178,63 @@ each have $n$ components.
 \textbf{Answer: } Yes. 
 \end{itemize}
 
+\subsection{Other methodological components of the analysis}
+I haven't thought about this too much in detail, but I'd be interested to hear more about some of the other methodological choices described in the Fer et al (2018) paper. 
+\begin{itemize}
+\item Calculation of effective sample size (section 2.2).
+\item Scaling factors (section 2.3). 
+\end{itemize}
+
 \subsection{MCMC Algorithm}
-\textbf{TODO}
+In the below algorithm, I consider a generic symmetric proposal density $q$. I don't know the specific proposal used in the paper, so I can adjust this if needed once this 
+is clarified. I also do not explicitly mention any interpolation uncertainty calculations (see questions section below). 
+
+The algorithm is given in more detail below, but my main takeaways are as follows. At each MCMC iteration, the true likelihood calculation is replaced by an approximation calculated 
+using the GP. Therefore, the algorithm samples from an approximation to the true posterior. To quantify the uncertainty created by this GP approximation, the sufficient statistic values
+used to calculate the likelihoods are sampled from the GP at the current and proposed parameter values. The alternative to this would be to simply use the GP mean at the parameter value. 
+However, the sampling approach bakes the GP uncertainty directly into the samples, which allows for the calculation of confidence intervals, etc. that better reflect the true uncertainty. 
+This GP kernel also allows for the calculation of the variance at each point, which is what I'm assuming you mean by ``interpolation uncertainty''. 
+\bigskip
+
+ \begin{algorithm}[H]
+	\SetAlgoLined
+	
+	\textbf{Input}: 
+	\begin{itemize}
+	\item Initial parameter values $u^{(0)}, \tau^{(0)}$
+	\item Fit emulator $\hat{T}(\cdot, \cdot, \cdot) \sim \mathcal{GP}(\mu(\cdot), k(\cdot, \cdot))$
+	\item Proposal density $q(\cdot, \cdot)$ for process-model parameters $u$ 
+	\item Number iterations $N_{\text{MCMC}}$
+	\end{itemize}
+		
+	\bigskip
+	
+	\For{$t = 1, \dots, N_{\text{MCMC}}$} {
+	\textit{MH step with GP approximation}: \\[.2cm]
+	Sample $u^{(t)} \sim q(u^{(t - 1)}, u^{(t)})$ \\
+	Sample $T^{(t - 1)} \sim \hat{T}(x, z, u^{(t - 1)})$, $T^{(t)} \sim \hat{T}(x, z, u^{(t)})$ \\
+	Calculate approximate likelihood $\hat{\mathcal{L}}^{(t - 1)} := \left(\tau^{(t - 1)}\right)^{-n} \exp\left\{\left(\tau^{(t - 1)}\right)^{-2} \hat{T}^{(t - 1)}\right\}$, and similarly for $\hat{\mathcal{L}}^{(t)} $  \\
+	Accept $u^{(t)}$ with probability $\min\left\{1, \frac{\hat{\mathcal{L}}^{(t)}p_0(u^{(t)}, \tau^{(t - 1)})}{\hat{\mathcal{L}}^{(t - 1)} p_0(u^{(t - 1)}, \tau^{(t - 1)})}\right\}$
+	
+	\bigskip
+	
+	\textit{Gibbs step for statistical parameters}: \\[.2cm]
+	Sample $\tau^{(t)} \sim p(\tau^{(t)}|u^{(t)})$
+	
+	}
+
+	
+\caption{MCMC for Parameter Calibration}
+\end{algorithm}
+
+
+\subsubsection{Questions}
+\begin{itemize}
+\item What proposal distribution $q(\cdot, \cdot)$ are you using? Are you mimicking the Haario et al paper, which is basically random walk MH, but with an adaptively chosen proposal variance?
+\item In the paper, you mention sampling current and proposed values for the sufficient statistic, as well as interpolation uncertainty. What specifically do you mean by interpolation uncertainty? Are 
+you just using the GP variance at the the value of the parameter, e.g. $k((x, z, u^{(t)}), (x, z, u^{(t)}))$? If this is correct, I'm curious how you use these variance calculations in subsequent analysis. 
+\end{itemize}
+
 
 
 \section{Future Directions}
